ai/base/ollama/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ai
  labels:
    app: ollama
    app.kubernetes.io/component: agent
    app.kubernetes.io/name: ollama
    app.kubernetes.io/part-of: ai
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: ollama
      app.kubernetes.io/component: agent
      app.kubernetes.io/name: ollama
      app.kubernetes.io/part-of: ai
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ollama
        app.kubernetes.io/component: agent
        app.kubernetes.io/name: ollama
        app.kubernetes.io/part-of: ai
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        node-role.kubernetes.io/ai: "true"
      tolerations:
        - key: nvidia.com/gpu
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
      - name: ollama
        image: ollama/ollama:0.16.0
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            protocol: TCP
            containerPort: 11434
        volumeMounts:
          - name: ollama-pvc
            mountPath: /root/.ollama
          - name: localtime
            mountPath: /etc/localtime
            readOnly: true
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 11434
          timeoutSeconds: 1
        securityContext: {}
        resources:
          requests:
            memory: "8Gi"
            cpu: "2"
            nvidia.com/gpu: "1"
          limits:
            memory: "16Gi"
            cpu: "4"
            nvidia.com/gpu: "1"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: ollama-pvc
          persistentVolumeClaim:
            claimName: ollama-local
        - name: localtime
          hostPath:
            path: /etc/localtime
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-tools
  namespace: ai
  labels:
    app: ollama-tools
    app.kubernetes.io/component: agent
    app.kubernetes.io/name: ollama-tools
    app.kubernetes.io/part-of: ai
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: ollama-tools
      app.kubernetes.io/component: agent
      app.kubernetes.io/name: ollama-tools
      app.kubernetes.io/part-of: ai
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ollama-tools
        app.kubernetes.io/component: agent
        app.kubernetes.io/name: ollama-tools
        app.kubernetes.io/part-of: ai
    spec:
      containers:
      - name: ollama-tools
        image: ollama/ollama:0.16.0
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            protocol: TCP
            containerPort: 11434
        volumeMounts:
          - name: ollama-tools-local
            mountPath: /root/.ollama
          - name: localtime
            mountPath: /etc/localtime
            readOnly: true
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 11434
          timeoutSeconds: 1
        securityContext: {}
        resources:
          requests:
            memory: "768Mi"
            cpu: "300m"
          limits:
            memory: "1500Mi"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: ollama-tools-local
          persistentVolumeClaim:
            claimName: ollama-tools-local
        - name: localtime
          hostPath:
            path: /etc/localtime
